Fix css spacing

--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,6 @@ main {
 .japan3 {
   font-weight: normal;
   font-size: 1rem;
-  margin-bottom: 1em;
 }
 
 header {
